# quote-bot

./: .pre-commit-config.yaml  Dockerfile  DockerfileAWS  README.md  aws_requirements.txt  build_aws.sh  docker-compose.yaml  lambda_function.py  pyproject.toml
quote_bot/: __init__.py  access.py  dynamo.py  main.py  settings.py  utils.py
quote_bot/designer/: __init__.py  designer.py
quote_bot/optimizator/: __init__.py  optimizator.py
quote_bot/templates/: __init__.py  templates.py
quote_bot/textmanager/: __init__.py  textmanager.py
